--- a/Pagina/Debate/reglas.html
+++ b/Pagina/Debate/reglas.html
@@ -14,6 +14,8 @@
     <meta name="description" content="Tu lugar para expresarte,informarte,dabatir.">
     <meta name="author" content="Made with <3 by a bunch of geeks from All Around The World ">
 
+
+
     <title>Que votamos?</title>
 
     <!-- Bootstrap core CSS -->
@@ -36,6 +38,14 @@
 
     <!-- Emoji-->
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
+    <!-- icon-->
+    <!--
+    <link rel="shortcut icon" href="question.ico" />
+    <link rel="apple-touch-icon" href="question.ico" />
+    <link rel="shortcut icon" type="image/ico" href="/img/question.png" />
+-->
+
 
     <!-- Magnific Popup core CSS file -->
     <link rel="stylesheet" href="../css/magnific-popup.css">
@@ -101,18 +111,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#home">Que votamos?</a>
+                <a class="navbar-brand" href="../index.html">Que votamos?</a>
             </div>
 
-            <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
 
-                    <li class="menuItem"><a href="#whatis">Informacion</a></li>
-                    <li class="menuItem"><a href="#useit">Agrupaciones</a></li>
-                    <li class="menuItem"><a href="#screen">Expresate</a></li>
-                    <li class="menuItem"><a href="#contact">Contacto</a></li>
-                </ul>
-            </div>
 
         </div>
     </nav>
@@ -144,12 +146,32 @@
                     <p>En cada pagina de opinion tendran 3500 caracteres, el formato sera similar al usado en <a href="http://www.debate.org/debates/Evolution-is-a-lie/3/" style="color: #48C9B0"> www.debate.org </a>, donde habra un maximo de 3 rounds (Critica + Respuesta), en cuanto a los recursos seran sin restricciones (texto, imagen, video).</p>
 
 
+                    <!-- -->
+                    <p class="lead" style="margin-top:0">Fechas de cierre</p>
 
 
 
+                    <p>Como en todo debate, no se va a poder cambiar las respuestas luego de enviadas, porque ante cada OPINION podemos ir cambiando nuetro discurso y esto haria perder formalismo.</p>
+                    <p>En base a la presentacion de las demas agrupacione se pueden formular sus opiniones</p>
+                    <p>No se demoren plis...</p>
 
+                    <div class="text-left">
 
+                        <p>&#9673; Texto de presentacion + panfleto: Sabado 11/06/2016.</p>
+                        <p>&#9673; Texto de opinion: Domingo 12/06/2016.</p>
+                        <p>&#9673; Texto de respuesta: Martes 14/06/2016.</p>
+                        <p>&#9673; Si quieren un round mas, me lo avian, ya eso es libre.</p>
 
+                    </div>
+
+                    <p class="lead" style="margin-top:0">Contacto</p>
+                    <div class="text-left">
+
+                        <p>&#8747; joseboretto@gmail.com.</p>
+                        <p>&#8747; wsp: 353 5 64 44 04</p>
+                        <p>&#8747;;fb: jose boretto blengino</p>
+
+                    </div>
 
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
