--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -33,7 +33,24 @@
     <link href="css/owl.theme.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-
+    <!--- FAVICON -->
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon//favicon-16x16.png">
+    <link rel="manifest" href="img/favicon//manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/favicon//ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <!-- Emoji-->
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
@@ -65,7 +82,7 @@
     <!-- FullScreen -->
     <div class="intro-header">
         <div class="col-xs-12 text-center abcen1">
-            <img src="question.png" class="wow fadeIn" data-wow-delay="1.5s">
+            <img src="img/question.png" class="wow fadeIn" data-wow-delay="1.5s">
             <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Que votamos?</h1>
             <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Tu lugar para expresarte,</h3>
             <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">informarte,</h3>
