--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -69,6 +69,33 @@
     <!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
 	<![endif]-->
+<!--
+<script>
+    (document).ready(function () {
+
+        //Sort random function
+        function random(owlSelector) {
+            owlSelector.children().sort(function () {
+                return Math.round(Math.random()) - 0.5;
+            }).each(function () {
+                $(this).appendTo(owlSelector);
+            });
+        }
+
+        $("#owl-demo").owlCarousel({
+            navigation: true
+
+            
+            , beforeInit: function (elem) {
+                //Parameter elem pointing to $("#owl-demo")
+                random(elem);
+            }
+
+        });
+
+    });
+</script>
+-->
 
 </head>
 
@@ -826,6 +853,34 @@
     <script src="js/uiMorphingButton_inflow.js"></script>
     <!-- Magnific Popup core JS file -->
     <script src="js/jquery.magnific-popup.js"></script>
+    <!--Google analytics-->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o)
+                , m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-74104605-3', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!--Heatmap-->
+    <script type="text/javascript">
+        var _mfq = _mfq || [];
+        (function () {
+            var mf = document.createElement("script");
+            mf.type = "text/javascript";
+            mf.async = true;
+            mf.src = "//cdn.mouseflow.com/projects/975997e9-26d7-449b-afa0-bc3adfce731f.js";
+            document.getElementsByTagName("head")[0].appendChild(mf);
+        })();
+    </script>
 </body>
 
 </html>
