Se elimino la parte de opiniones para que puedan participar todas las agrupaciones. Ademas se elimino el texto que hablaba de version beta. Se agrega el page Indicator/owl control, pero no funciona de forma dinamica

--- a/Pagina/Debate/plantillaDebate.html
+++ b/Pagina/Debate/plantillaDebate.html
@@ -124,60 +124,16 @@
     <div class="content-section-c ">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center white">
-                    <h2>Reglas de la Seccion debate</h2>
-                    <p class="lead" style="margin-top:0">Para las agrupaciones...</p>
-                    <p>La idea de esta seccion es fomentar el debate entre las agrupaciones, que puedan comunicarse con respeto.Se basa en la idea del argentina debate, un evento que nos ayudo a crecer como sociedad.</p>
-                    <br>
-                    <p class="lead" style="margin-top:0">Presentacion</p>
+                <span class="col-sm-1"></span>
+                <div class="col-sm-10   white">
+                    <h2>Opinion</h2>
+                    <p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque eleifend libero, non convallis diam auctor id. Nulla blandit, dolor nec ultrices porta, lacus nibh varius justo, vel convallis nisi leo sed tortor. Maecenas pellentesque sem sit amet quam venenatis, sit amet tempus felis hendrerit. Donec id mauris eros. Donec eget luctus elit. Etiam mattis ante orci, sit amet consequat nulla venenatis porta. Aliquam accumsan, augue quis luctus suscipit, augue ligula sollicitudin risus, eu ultricies risus neque sollicitudin urna. Curabitur bibendum mi quis ipsum mollis, ac fermentum purus accumsan. Proin sit amet euismod velit. Ut ut tincidunt turpis. Donec luctus metus a lectus pulvinar tempor non vitae sem. Pellentesque tincidunt, urna a iaculis dapibus, purus nulla posuere felis, at gravida erat eros eget nibh. Vivamus nec risus purus. Integer ac maximus sapien, vel bibendum risus. Sed suscipit porttitor magna, in aliquam nibh euismod non. Cras vel purus nibh. Nam posuere tincidunt ligula in posuere. Cras sagittis viverra tortor sit amet consequat. Suspendisse blandit, ante id bibendum porttitor, nibh urna ultrices libero, a sollicitudin ante ante non ipsum. Duis sit amet tincidunt justo. In sollicitudin ligula velit. Nulla imperdiet ornare dictum. Aliquam iaculis mi vel eleifend cursus. Curabitur non consequat ligula. Vestibulum mattis dolor vel elit facilisis commodo. Suspendisse pretium euismod ex et vestibulum. Curabitur volutpat, urna ut venenatis aliquam, ante leo imperdiet ante, in mollis est massa id massa. Maecenas aliquam, nunc quis ultrices ultrices, tortor urna placerat mi, id posuere sem augue in felis. Fusce lobortis tincidunt arcu non lobortis. Vivamus in enim eu leo mollis hendrerit. Curabitur dignissim tellus metus. Quisque laoreet lacus ac ullamcorper congue. Aenean efficitur placerat ex, sed ullamcorper erat auctor eu. Aenean volutpat, ipsum et ornare mattis, leo purus faucibus lectus, a faucibus ipsum erat nec urna. Pellentesque id ipsum dignissim, euismod odio vitae, malesuada massa. Aenean et tincidunt lacus. Aliquam neque quam, convallis id malesuada sit amet, eleifend vitae magna. Sed a ante congue, lacinia odio a, facilisis massa. Quisque porttitor mauris vitae tellus porta elementum. Integer cursus nisi sapien, nec egestas lorem dignissim sed. Nullam malesuada quis magna quis commodo. Suspendisse pharetra a lorem non condimentum. Nam hendrerit augue purus, eu venenatis orci auctor in. Phasellus vehicula elementum suscipit. Etiam euismod, tortor ut aliquet accumsan, orci nisl blandit lorem, eget tempor mi sem eget sapien. Pellentesque luctus porttitor ligula, gravida ullamcorper eros volutpat sit amet. Vestibulum tincidunt in neque nec condimentum. Phasellus velit metus, pellentesque auctor commodo nec, convallis non odio. Donec tempus leo consectetur felis tincidunt bibendum. Mauris nec porta arcu, fermentum aliquam velit. Vivamus vitae mauris mattis, elementum ligula in, vehicula elit. Ut quam urna, efficitur non risus quis, laoreet condimentum nulla. Donec condimentum felis vitae metus posuere, ac viverra nisl dignissim. Suspendisse fringilla dui at velit pellentesque blandit. Nulla vel nisi vestibulum, placerat libero nec, dapibus lorem. Vestibulum finibus elit rhoncus efficitur volutpat. Vestibulum vestibulum leo at bibendum consectetur. Fusce vitae ullamcorper libero, eget faucibus risus. Integer et elit sit amet orci mollis sagittis. Aliquam erat volutpat. Donec ultrices semper felis, sed lacinia sed.</p>
 
-
-                    <p>En la primer parte del cuadro las agrupaciones se prensetan de forma rapida y resumida. En el lado izquierdo escribiran las cosas que vienen haciendo, su pasado. En el lado derecho sus propuestas, el futuro,con un maximo de 250 caracteres en cada seccion.</p>
-
-                    <p>Ademas van a tener cada uno una pagina donde van a poder poner lo que quieran (texto, imagen, video), explayarse sin limites, algo asi como el volante que estan repartiendo, aprovechen que es una forma de ahorra papel y recursos.</p>
-
-                    <p>Las posiciones en el slideshow seran aleotria cada vez que se carga la pagina asi mantener la igualdad de oporunidades de ser visto.</p>
-
-
-                    <p class="lead" style="margin-top:0">Debate</p>
-
-                    <p>Luego de que cada agrupacion se prsento, en la parte inferior de cuadro cada agrupacion va a poder opinar/debatir sobre lo expressado por la OTRA agrupacion, tal como en el argentina debate. En 100 caracteres cada yno va a brindar una opinion/critica resumida, ya que si ponemos toooodo el texto en la pagina principal el ESTUDIANTE no lo va a leer, asi que vamos a tener una pagina por cada opion.</p>
-
-                    <p>En cada pagina de opinion tendran 3500 caracteres, el formato sera similar al usado en <a href="http://www.debate.org/debates/Evolution-is-a-lie/3/" style="color: #48C9B0"> www.debate.org </a>, donde habra un maximo de 3 rounds (Critica + Respuesta), en cuanto a los recursos seran sin restricciones (texto, imagen, video).</p>
-
-
-                    <!-- -->
-                    <p class="lead" style="margin-top:0">Fechas de cierre</p>
-
-
-
-                    <p>Como en todo debate, no se va a poder cambiar las respuestas luego de enviadas, porque ante cada OPINION podemos ir cambiando nuetro discurso y esto haria perder formalismo.</p>
-                    <p>En base a la presentacion de las demas agrupacione se pueden formular sus opiniones</p>
-                    <p>No se demoren plis...</p>
-
-                    <div class="text-center">
-                        <a href="plantillaDebate.html" style="color: #48C9B0"> <u>Plantilla Debate</u></a>
-                    </div>
-
-                    <div class="text-left">
-
-                        <p>&#9673; Texto de presentacion + panfleto: Sabado 11/06/2016.</p>
-                        <p>&#9673; Texto de opinion: Domingo 12/06/2016.</p>
-                        <p>&#9673; Texto de respuesta: Martes 14/06/2016.</p>
-                        <p>&#9673; Si quieren un round mas, me lo avian, ya eso es libre.</p>
-
-                    </div>
-
-                    <p class="lead" style="margin-top:0">Contacto</p>
-                    <div class="text-left">
-
-                        <p>&#8747; joseboretto@gmail.com.</p>
-                        <p>&#8747; wsp: 353 5 64 44 04</p>
-                        <p>&#8747;;fb: jose boretto blengino</p>
-
-                    </div>
 
                 </div>
+                <span class="col-sm-1"></span>
+
+
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <div class="mockup-content">
                         <div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
@@ -188,6 +144,26 @@
 
             </div>
         </div>
+    </div>
+
+    <!-- Screenshot -->
+    <!-- Para cambiar el tamano del carrusel hay que ir a owl.carrysel.js en la linea updateItems : function () que se e=nacarga del hacerlo responsive -->
+
+    <div id="screen" class="content-section-b2">
+        <div class="container">
+            <div class="row">
+                <span class="col-sm-1"></span>
+                <div class="col-sm-10">
+                    <h2>Respuesta</h2>
+                    <p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque eleifend libero, non convallis diam auctor id. Nulla blandit, dolor nec ultrices porta, lacus nibh varius justo, vel convallis nisi leo sed tortor. Maecenas pellentesque sem sit amet quam venenatis, sit amet tempus felis hendrerit. Donec id mauris eros. Donec eget luctus elit. Etiam mattis ante orci, sit amet consequat nulla venenatis porta. Aliquam accumsan, augue quis luctus suscipit, augue ligula sollicitudin risus, eu ultricies risus neque sollicitudin urna. Curabitur bibendum mi quis ipsum mollis, ac fermentum purus accumsan. Proin sit amet euismod velit. Ut ut tincidunt turpis. Donec luctus metus a lectus pulvinar tempor non vitae sem. Pellentesque tincidunt, urna a iaculis dapibus, purus nulla posuere felis, at gravida erat eros eget nibh. Vivamus nec risus purus. Integer ac maximus sapien, vel bibendum risus. Sed suscipit porttitor magna, in aliquam nibh euismod non. Cras vel purus nibh. Nam posuere tincidunt ligula in posuere. Cras sagittis viverra tortor sit amet consequat. Suspendisse blandit, ante id bibendum porttitor, nibh urna ultrices libero, a sollicitudin ante ante non ipsum. Duis sit amet tincidunt justo. In sollicitudin ligula velit. Nulla imperdiet ornare dictum. Aliquam iaculis mi vel eleifend cursus. Curabitur non consequat ligula. Vestibulum mattis dolor vel elit facilisis commodo. Suspendisse pretium euismod ex et vestibulum. Curabitur volutpat, urna ut venenatis aliquam, ante leo imperdiet ante, in mollis est massa id massa. Maecenas aliquam, nunc quis ultrices ultrices, tortor urna placerat mi, id posuere sem augue in felis. Fusce lobortis tincidunt arcu non lobortis. Vivamus in enim eu leo mollis hendrerit. Curabitur dignissim tellus metus. Quisque laoreet lacus ac ullamcorper congue. Aenean efficitur placerat ex, sed ullamcorper erat auctor eu. Aenean volutpat, ipsum et ornare mattis, leo purus faucibus lectus, a faucibus ipsum erat nec urna. Pellentesque id ipsum dignissim, euismod odio vitae, malesuada massa. Aenean et tincidunt lacus. Aliquam neque quam, convallis id malesuada sit amet, eleifend vitae magna. Sed a ante congue, lacinia odio a, facilisis massa. Quisque porttitor mauris vitae tellus porta elementum. Integer cursus nisi sapien, nec egestas lorem dignissim sed. Nullam malesuada quis magna quis commodo. Suspendisse pharetra a lorem non condimentum. Nam hendrerit augue purus, eu venenatis orci auctor in. Phasellus vehicula elementum suscipit. Etiam euismod, tortor ut aliquet accumsan, orci nisl blandit lorem, eget tempor mi sem eget sapien. Pellentesque luctus porttitor ligula, gravida ullamcorper eros volutpat sit amet. Vestibulum tincidunt in neque nec condimentum. Phasellus velit metus, pellentesque auctor commodo nec, convallis non odio. Donec tempus leo consectetur felis tincidunt bibendum. Mauris nec porta arcu, fermentum aliquam velit. Vivamus vitae mauris mattis, elementum ligula in, vehicula elit. Ut quam urna, efficitur non risus quis, laoreet condimentum nulla. Donec condimentum felis vitae metus posuere, ac viverra nisl dignissim. Suspendisse fringilla dui at velit pellentesque blandit. Nulla vel nisi vestibulum, placerat libero nec, dapibus lorem. Vestibulum finibus elit rhoncus efficitur volutpat. Vestibulum vestibulum leo at bibendum consectetur. Fusce vitae ullamcorper libero, eget faucibus risus. Integer et elit sit amet orci mollis sagittis. Aliquam erat volutpat. Donec ultrices semper felis, sed lacinia sed.</p>
+                </div>
+                <span class="col-sm-1"></span>
+            </div>
+            <!--fin parte abajo-->
+
+        </div>
+
+
     </div>
 
     <footer>
