css y js unido y minificado

--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -28,28 +28,21 @@
     <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS-->
-    <link href="css/general.css" rel="stylesheet">
-
+<!--    <link href="css/general.css" rel="stylesheet">-->
+        <link href="css/todosEstilos.min.css" rel="stylesheet">
     <!-- Owl-Carousel -->
+<!--
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.theme.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
+-->
     <!--- FAVICON -->
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon//apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon//apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon//apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="img/favicon//android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon//favicon-16x16.png">
     <link rel="manifest" href="img/favicon//manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="img/favicon//ms-icon-144x144.png">
@@ -58,7 +51,7 @@
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
     <!-- Magnific Popup core CSS file -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
+<!--    <link rel="stylesheet" href="css/magnific-popup.css">-->
 
     <script src="js/modernizr-2.8.3.min.js"></script>
 
@@ -777,12 +770,15 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/output.min.js"></script>
+<!--
     <script src="js/owl.carousel.js"></script>
     <script src="js/script.js"></script>
+-->
     <!-- StikyMenu -->
-    <script src="js/stickUp.min.js"></script>
+<!--    <script src="js/stickUp.min.js"></script>-->
     <script type="text/javascript">
         jQuery(function ($) {
             $(document).ready(function () {
@@ -793,12 +789,12 @@
     </script>
     <!-- Smoothscroll -->
     <script type="text/javascript" src="js/jquery.corner.js"></script>
-    <script src="js/wow.min.js"></script>
+<!--    <script src="js/wow.min.js"></script>-->
     <script>
         new WOW().init();
     </script>
-    <script src="js/classie.js"></script>
-    <script src="js/uiMorphingButton_inflow.js"></script>
+<!--    <script src="js/classie.js"></script>-->
+<!--    <script src="js/uiMorphingButton_inflow.js"></script>-->
     <!-- Magnific Popup core JS file -->
     <script src="js/jquery.magnific-popup.js"></script>
     <!--Google analytics-->
